--- a/NewsletterAppMVC/NewsletterAppMVC/Views/Admin/Index.cshtml
+++ b/NewsletterAppMVC/NewsletterAppMVC/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="card-body">
             @foreach (var signup in Model)
             {
-                using (Html.BeginForm("Unsubscribe", "Admin", FormMethod.Post))
+                using (Html.BeginForm("Unsubscribe", "Admin", FormMethod.Post)) // Unsubscribe: method, Admin: AdminController page
                 {
                     <input type="hidden" name="Id" value="@signup.Id" />
                     <div class="row mb-3">
