--- a/CarInsurance/CarInsurance/Views/Admin/Index.cshtml
+++ b/CarInsurance/CarInsurance/Views/Admin/Index.cshtml
@@ -11,14 +11,17 @@
             {
                 <input type="hidden" name="Id" value="@quote.Id" />
                 <div class="row mb-3">
-                    <div class="col-4">
+                    <div class="col-3">
                         @quote.FirstName
                     </div>
                     <div class="col-3">
                         @quote.LastName
                     </div>
-                    <div class="col-5">
+                    <div class="col-4">
                         @quote.EmailAddress
+                    </div>
+                    <div class="col-2">
+                        $ @quote.FinalQuote
                     </div>
                 </div>
             }
